--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@metamask/sdk": "^0.0.1-beta.5",
     "antd": "^5.1.0",
+    "axios": "^1.2.1",
     "blockchain": "*",
     "ethers": "^5.7.2",
     "moment": "^2.29.4",
